replace desktop actions with our safe ones