@@ -24,6 +24,7 @@ import cc.hyperium.netty.NettyClient;
 import cc.hyperium.netty.packet.packets.serverbound.ServerCrossDataPacket;
 import cc.hyperium.purchases.HyperiumPurchase;
 import cc.hyperium.purchases.PurchaseApi;
+import cc.hyperium.utils.HyperiumDesktop;
 import cc.hyperium.utils.JsonHolder;
 import cc.hyperium.utils.RenderUtils;
 import cc.hyperium.utils.UUIDUtil;
@@ -34,7 +35,6 @@ import net.minecraft.client.gui.GuiYesNoCallback;
 import net.minecraft.client.gui.ScaledResolution;
 import net.minecraft.client.renderer.GlStateManager;
 import net.minecraft.client.renderer.texture.DynamicTexture;
-import net.minecraft.client.resources.I18n;
 
 import javax.imageio.ImageIO;
 import java.awt.*;
@@ -43,7 +43,6 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Map;
@@ -53,12 +52,12 @@ import java.util.concurrent.ConcurrentHashMap;
 public class CapesGui extends HyperiumGui implements GuiYesNoCallback {
 
     private int purchaseIds;
-    private Map<String, DynamicTexture> textures = new ConcurrentHashMap<>();
-    private Map<String, BufferedImage> texturesImage = new ConcurrentHashMap<>();
+    private final Map<String, DynamicTexture> textures = new ConcurrentHashMap<>();
+    private final Map<String, BufferedImage> texturesImage = new ConcurrentHashMap<>();
     private JsonHolder cosmeticCallback = new JsonHolder();
     private boolean purchasing;
-    private HashMap<Integer, Runnable> ids = new HashMap<>();
-    private HashMap<String, Integer> intMap = new HashMap<>();
+    private final HashMap<Integer, Runnable> ids = new HashMap<>();
+    private final HashMap<String, Integer> intMap = new HashMap<>();
 
     public CapesGui() {
         guiScale = 2;
@@ -134,17 +133,10 @@ public class CapesGui extends HyperiumGui implements GuiYesNoCallback {
         });
 
         reg("CUSTOM", new GuiButton(nextId(), 1, 22, "Custom Cape"), guiButton -> {
-            Desktop desktop = Desktop.isDesktopSupported() ? Desktop.getDesktop() : null;
-            if (desktop != null) {
-                try {
-                    URI uri = new URL("https://capes.hyperium.cc").toURI();
-                    if(desktop.isSupported(Desktop.Action.BROWSE))
-                        desktop.browse(uri);
-                    else
-                        GeneralChatHandler.instance().sendMessage(I18n.format("message.browseerror", uri));
-                } catch (Exception e) {
-                    Hyperium.LOGGER.error("Could not open link", e);
-                }
+            try {
+                HyperiumDesktop.INSTANCE.browse(new URI("https://capes.hyperium.cc"));
+            } catch (Exception e) {
+                Hyperium.LOGGER.error("Could not open link", e);
             }
         }, guiButton -> {
         });
@@ -211,13 +203,10 @@ public class CapesGui extends HyperiumGui implements GuiYesNoCallback {
             GlStateManager.scale(.5F, .5F, .5F);
 
             actions.put(block1, () -> {
-                Desktop desktop = Desktop.getDesktop();
-                if (desktop != null) {
-                    try {
-                        desktop.browse(new URL("https://purchase.sk1er.club/category/1125808").toURI());
-                    } catch (IOException | URISyntaxException e) {
-                        e.printStackTrace();
-                    }
+                try {
+                    HyperiumDesktop.INSTANCE.browse(new URI("https://purchase.sk1er.club/category/1125808"));
+                } catch (Exception e) {
+                    e.printStackTrace();
                 }
             });
 
